--- a/docs-src/package.json
+++ b/docs-src/package.json
@@ -17,6 +17,7 @@
     "@mdx-js/react": "^1.6.22",
     "@saucelabs/theme-github-codeblock": "^0.1.1",
     "clsx": "^1.2.1",
+    "docusaurus-lunr-search": "^2.3.2",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
