--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,2 +1,3 @@
 # Make Team Scenes & Predictions default PR reviewer for this repo
 * @annotell/scenes-and-predictions
+docs-src/docs/dataset-refinement @annotell/data-quality
