--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -4,6 +4,6 @@
 
 - @annotell/scenes-and-predictions
 
-# Make team data quality owner of dataset refinement directory
+# Make team data quality owner of dataset exploration directory
 
-docs-src/docs/dataset-refinement @annotell/data-quality
+docs-src/docs/dataset-exploration @annotell/data-quality
