--- a/docs-src/package.json
+++ b/docs-src/package.json
@@ -12,22 +12,23 @@
     "clear": "docusaurus clear"
   },
   "dependencies": {
-    "@docusaurus/core": "2.2.0",
-    "@docusaurus/preset-classic": "2.2.0",
-    "@mdx-js/react": "^1.6.22",
-    "@saucelabs/theme-github-codeblock": "^0.1.1",
+    "@docusaurus/core": "3.3.2",
+    "@docusaurus/preset-classic": "3.3.2",
+    "@mdx-js/react": "^3.0.1",
+    "@saucelabs/theme-github-codeblock": "^0.2.1",
+    "classnames": "^2.5.1",
     "clsx": "^1.2.1",
-    "docusaurus-lunr-search": "^2.3.2",
+    "docusaurus-lunr-search": "^3.3.2",
     "hast-util-is-element": "1.1.0",
-    "prism-react-renderer": "^1.3.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "rehype-katex": "5",
-    "remark-math": "3",
+    "prism-react-renderer": "^2.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "rehype-katex": "^7",
+    "remark-math": "^6",
     "url": "^0.11.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.2.0"
+    "@docusaurus/module-type-aliases": "3.3.2"
   },
   "browserslist": {
     "production": [
@@ -42,6 +43,6 @@
     ]
   },
   "engines": {
-    "node": ">=16.14"
+    "node": ">=18"
   }
 }
