--- a/docs-src/package.json
+++ b/docs-src/package.json
@@ -12,6 +12,7 @@
     "clear": "docusaurus clear"
   },
   "dependencies": {
+    "@algolia/client-search": "^4.23.3",
     "@docusaurus/core": "3.3.2",
     "@docusaurus/preset-classic": "3.3.2",
     "@mdx-js/react": "^3.0.1",
@@ -23,12 +24,18 @@
     "prism-react-renderer": "^2.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loadable": "^5.5.0",
     "rehype-katex": "^7",
     "remark-math": "^6",
+    "search-insights": "^2.13.0",
     "url": "^0.11.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "3.3.2"
+    "@docusaurus/module-type-aliases": "3.3.2",
+    "@docusaurus/tsconfig": "3.0.0",
+    "@docusaurus/types": "3.3.2",
+    "@types/react": "^18.2.29",
+    "typescript": "~5.2.2"
   },
   "browserslist": {
     "production": [
