--- a/docs-src/package.json
+++ b/docs-src/package.json
@@ -16,10 +16,10 @@
     "@docusaurus/core": "3.3.2",
     "@docusaurus/preset-classic": "3.3.2",
     "@mdx-js/react": "^3.0.1",
-    "@saucelabs/theme-github-codeblock": "^0.2.1",
     "classnames": "^2.5.1",
     "clsx": "^1.2.1",
     "docusaurus-lunr-search": "^3.3.2",
+    "docusaurus-theme-github-codeblock": "^2.0.2",
     "hast-util-is-element": "1.1.0",
     "prism-react-renderer": "^2.3.1",
     "react": "^18.2.0",
