--- a/docs-src/package.json
+++ b/docs-src/package.json
@@ -15,6 +15,8 @@
     "@algolia/client-search": "^4.23.3",
     "@docusaurus/core": "3.3.2",
     "@docusaurus/preset-classic": "3.3.2",
+    "@expressive-code/plugin-collapsible-sections": "^0.35.3",
+    "@expressive-code/plugin-line-numbers": "^0.35.3",
     "@mdx-js/react": "^3.0.1",
     "classnames": "^2.5.1",
     "clsx": "^1.2.1",
@@ -25,6 +27,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loadable": "^5.5.0",
+    "rehype-expressive-code": "^0.35.3",
     "rehype-katex": "^7",
     "remark-math": "^6",
     "search-insights": "^2.13.0",
