--- a/docs-src/package.json
+++ b/docs-src/package.json
@@ -9,7 +9,8 @@
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "serve": "docusaurus serve",
-    "clear": "docusaurus clear"
+    "clear": "docusaurus clear",
+    "dev": "nodemon -e js,jsx,ts,tsx,md,mdx,css --ignore build --exec \"docusaurus build && docusaurus serve\""
   },
   "dependencies": {
     "@algolia/client-search": "^4.23.3",
@@ -35,6 +36,7 @@
     "@docusaurus/tsconfig": "3.0.0",
     "@docusaurus/types": "3.3.2",
     "@types/react": "^18.2.29",
+    "nodemon": "^3.1.2",
     "typescript": "~5.2.2"
   },
   "browserslist": {
