--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,8 +1,8 @@
 # Docs for codeowners https://docs.github.com/en/repositories/managing-your-repositorys-settings-and-features/customizing-your-repository/about-code-owners
 
-# Make Team Scenes & Predictions default PR reviewer for this repo
+# Make Team Order default PR reviewer for this repo
 
-- @annotell/scenes-and-predictions
+- @annotell/order
 
 # Make team data quality owner of dataset exploration directory
 
