--- a/docs-src/package.json
+++ b/docs-src/package.json
@@ -14,12 +14,12 @@
   },
   "dependencies": {
     "@algolia/client-search": "^4.23.3",
-    "@docusaurus/core": "3.3.2",
-    "@docusaurus/preset-classic": "3.3.2",
+    "@docusaurus/core": "^3.6.3",
+    "@docusaurus/preset-classic": "^3.6.3",
     "@mdx-js/react": "^3.0.1",
     "classnames": "^2.5.1",
     "clsx": "^1.2.1",
-    "docusaurus-lunr-search": "^3.4.0",
+    "docusaurus-lunr-search": "^3.5.0",
     "docusaurus-theme-github-codeblock": "^2.0.2",
     "hast-util-is-element": "1.1.0",
     "prism-react-renderer": "^2.3.1",
@@ -32,7 +32,7 @@
     "url": "^0.11.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "3.3.2",
+    "@docusaurus/module-type-aliases": "^3.6.3",
     "@docusaurus/tsconfig": "3.0.0",
     "@docusaurus/types": "3.3.2",
     "@types/react": "^18.2.29",
