--- a/docs-src/package.json
+++ b/docs-src/package.json
@@ -26,6 +26,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loadable": "^5.5.0",
+    "redocusaurus": "^2.2.0",
     "rehype-katex": "^7",
     "remark-math": "^6",
     "search-insights": "^2.13.0",
