--- a/docs-src/package.json
+++ b/docs-src/package.json
@@ -14,8 +14,9 @@
   },
   "dependencies": {
     "@algolia/client-search": "^4.23.3",
-    "@docusaurus/core": "3.3.2",
-    "@docusaurus/preset-classic": "3.3.2",
+    "@docusaurus/core": "3.7.0",
+    "@docusaurus/preset-classic": "3.7.0",
+    "@docusaurus/theme-common": "^3.7.0",
     "@mdx-js/react": "^3.0.1",
     "classnames": "^2.5.1",
     "clsx": "^1.2.1",
